feat(security): complete SEC-004 and Workstream 3 rejection visibility
- centralize DLQ header constants in DlqHeaders
- route first replay detections to the DLQ with rate-gating
- route topic-meta auth failures to the DLQ with mapped reason codes
- record excluded-topic failures for schedule-commands auth rejections
- implement timer-start cancellation tombstones on process deactivation
- add/update unit and security integration tests
- update the security roadmap and backlog to mark SEC-004/007/008/010 complete